--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 
 
-@import url(@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&display=swap');
 
 
 body {
-    font-family: font-family: 'IM Fell French Canon', serif;
+     font-family: 'IM Fell French Canon', serif;
 }
 
 #showcase {
